Definidas directivas para localización en el layout

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,2 +1,8 @@
-<h1>Under Construction!</h1>
-<p>This page is under construction</p>
+<section>
+  <article>
+    <h1 i18n="Card Header|Title for the under construction card@@constructionHeader">Under Construction!</h1>
+    <p i18n="Card Description|A description for the under construction card.@@constructionDescription">This page is
+      under construction</p>
+  </article>
+</section>
+
